# THW-Automate

./: .dockerignore  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt
config/: __init__.py  caldav.py  config.py  groupalarm.py  hermine.py  imap.py  interface.py  logging.py  mqtt.py  watcher.py
lib/: groupalarm.py  hermine.LICENSE  hermine.py
modules/: alarmierung.py  ausbildungsdienst.py  beflaggung.py  clients.py  module.py  user_interface.py  utils.py
