[project]
name = "automatisierung"
version = "0.0.0-dev"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astral~=3.2",
    "icalevents~=0.2",
    "imap-tools~=1.10",
    "mgrs~=1.5",
    "paho-mqtt~=2.1",
    "pycryptodome~=3.21",
    "python-socketio~=5.12",
    "requests~=2.32",
    "schedule~=1.2",
    "toml~=0.10",
    "typeguard~=4.4",
    "watchdog~=6.0",
]
